feat: Fix and update pet controller
